--- a/MathСalculator.WebUI/Views/Methods/Index.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Index.cshtml
@@ -47,7 +47,7 @@
                     <p class="text-success">
                         Решите уравнение f(x) = 0 методом хорд онлайн всего за несколько секунд:))
                     </p>
-                    <p><a class="btn btn-lg btn-primary" href="@Url.Action("Chord", "Methods")" role="button">Подробнее</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="@Url.Action("Chord", "Iteration")" role="button">Подробнее</a></p>
                 </div>
 
             </div>
@@ -59,7 +59,7 @@
                 <div class="carousel-caption">
                             <h1>Не нужно усложнять!!!</h1>
                     <p>Ведь можно решить уравнения методом Ньютона за несколько секунд!</p>
-                    <p><a class="btn btn-lg btn-primary" href="@Url.Action("Newton", "Methods")" role="button">Подробнее</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="@Url.Action("Newton", "Iteration")" role="button">Подробнее</a></p>
                 </div>
             </div>
         </div>
@@ -110,13 +110,13 @@
     <div class="col-lg-4">
         <h2>Метод простой итерации</h2>
         <p>Один из простейших численных методов  решения уравнений . Метод основан на принципе сжимающего отображения , который применительно к численным методам в общем виде также может называться методом простой итерации или методом последовательных приближений</p>
-        <p><a class="btn btn-primary" href="@Url.Action("SimpleIteration", "Methods")" role="button">Подробнее &raquo;</a></p>
+        <p><a class="btn btn-primary" href="@Url.Action("SimpleIteration", "Iteration")" role="button">Подробнее &raquo;</a></p>
     </div>
 
     <div class=" col-lg-4">
         <h2>Метод Ньютона</h2>
         <p>Метод Ньютона — это итерационный численный метод нахождения корня (нуля) заданной функции.Поиск решения осуществляется путём построения последовательных приближений и основан на принципах простой итерации.</p>
-        <p><a href="@Url.Action("Newton", "Methods")" class="btn btn-primary" role="button">Подробнее &raquo;</a></p>
+        <p><a href="@Url.Action("Newton", "Iteration")" class="btn btn-primary" role="button">Подробнее &raquo;</a></p>
     </div><!--/.col-xs-6.col-lg-4-->
 </div>
 
