--- a/MathСalculator.WebUI/Views/Methods/Simpson.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Simpson.cshtml
@@ -82,8 +82,8 @@
 <h2 class="myh2"><strong>Вычислить онлайн</strong></h2>
 
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+@*<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
 
 <div class="alert alert-success" role="alert">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
