--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -8,16 +8,8 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    @*<script src="~/Scripts/jquery.validate.min.js"></script>*@
     <script src="~/Scripts/simIter.js"></script>
     <link href="~/Content/simIter.css" rel="stylesheet" />
-    @*<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
-   @*<script>
-    $(".collapse").collapse('hide');
-    if ($(document).height() <= $(window).height())
-        $("footer.footer").addClass("navbar-fixed-bottom");
-</script>*@
-
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="~/Content/offcanvas.css" rel="stylesheet" />
     <script src="~/Scripts/npm.js"></script>
@@ -44,7 +36,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li ><a href="@Url.Action("Index", "Methods")">Главная</a></li>
-                  
+
                     <li class="dropdown dropdown-large">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Методы<b class="caret"></b></a>
 
@@ -56,20 +48,20 @@
                                     <li><a href="#">LU - разложение</a></li>
                                     <li><a href="#">Метод квадратного корня</a></li>
                                     <li class="divider"></li>
-                                    <a href="@Url.Action("Iteration", "Methods")">
+                                    <a href="@Url.Action("Iteration", "Iteration")">
                                         <li class="dropdown-header">Итерационные методы</li>
                                     </a>
-                                        <li><a href="@Url.Action("SimpleIteration", "Methods")">Метод простой итерации</a></li>
-                                        <li><a href="@Url.Action("Chord", "Methods")">Метод хорд</a></li>
-                                        <li><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></li>
-                                        <li><a href="@Url.Action("Secants", "Methods")">Метод секущих</a></li>
+                                    <li><a href="@Url.Action("SimpleIteration", "Iteration")">Метод простой итерации</a></li>
+                                    <li><a href="@Url.Action("Chord", "Iteration")">Метод хорд</a></li>
+                                    <li><a href="@Url.Action("Newton", "Iteration")">Метод Ньютона</a></li>
+                                    <li><a href="@Url.Action("Secants", "Iteration")">Метод секущих</a></li>
 
-</ul>
+                                </ul>
                             </li>
                             <li class="col-sm-3">
                                 <ul>
                                     <a href="@Url.Action("NumericIntegr", "Methods")"><li class="dropdown-header">Численное интегрирование</li></a>
-                                    <li><a href="@Url.Action("MathCalc", "Methods")">Метод прямоугольников</a></li>
+                                    <li><a href="@Url.Action("Rectangles", "Methods")">Метод прямоугольников</a></li>
                                     <li><a href="@Url.Action("Trapezoids", "Methods")">Метод трапеций</a></li>
                                     <li><a href="@Url.Action("Simpson", "Methods")">Метод парабол (метод Симпсона)</a></li>
                                     <li><a href="#">Метод 3/8</a></li>
@@ -110,6 +102,7 @@
                         </ul>
 
                     </li>
+                    <li><a href="@Url.Action("About", "Methods")">About</a></li>
                 </ul>
  
                 <div class="nav navbar-nav navbar-right">
