--- a/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
@@ -70,9 +70,10 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle mytitle" data-toggle="dropdown">Численное интегрирование<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="@Url.Action("Rectangles", "Methods")">Метод прямоугольников</a></li>
-                                <li><a href="@Url.Action("Trapezoids", "Methods")">Метод трапеций</a></li>
-                                <li><a href="@Url.Action("Simpson", "Methods")">Метод парабол (метод Симпсона)</a></li>
+                                <li><a href="@Url.Action("Rectangles", "NumericIntegral")">Метод прямоугольников</a></li>
+                                <li><a href="@Url.Action("Trapezoids", "NumericIntegral")">Метод трапеций</a></li>
+                                <li><a href="@Url.Action("Simpson", "NumericIntegral")">Метод парабол (метод Симпсона)</a></li>
+                                <li><a href="@Url.Action("Method38", "NumericIntegral")">Метод 3/8</a></li>
                                 <li class="divider"></li>
                             </ul>
                         </li>
