--- a/MathСalculator.WebUI/Views/Methods/Gaus.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Gaus.Mobile.cshtml
@@ -58,16 +58,16 @@
         <br />
 
         @Html.Hidden("countRows", Model.countRows)
-        ;
+    
         @Html.Hidden("countVariable", Model.countVariable)
-        ;
+   
 
         @Html.LabelFor(x => x.Matrix)
         <br />
         for (int k = 0; k < Model.countRows * Model.countVariable; k++)
         {
 
-            @Html.TextBox("ints", "0")
+            @Html.TextBox("ints", "0", new { @id = "myInput1" })
             for (int j = 0; j < Model.countRows; j++)
             {
                 if (j != 0 && k == j * Model.countVariable - 1)
@@ -76,13 +76,13 @@
                 }
             }
         }
-
+    
         <br />
         @Html.LabelFor(x => x.myArray)
         <br />
         for (int k = 0; k < Model.countRows; k++)
         {
-            @Html.TextBoxFor(x => x.myArray)
+            @Html.TextBoxFor(x => x.myArray, new { @placeholder = "0", @id = "myInput1" })
 
             <br />
         }
@@ -107,4 +107,13 @@
         <br />
     }
 }
+
+<style>
+    #myInput1 {
+        width: 20px; /* Ширина поля в пикселах */
+     
+        /*margin-top: 100px;*/
+    }
+
+</style>
 
