--- a/MathСalculator.WebUI/Views/Iteration/Iteration.cshtml
+++ b/MathСalculator.WebUI/Views/Iteration/Iteration.cshtml
@@ -36,6 +36,12 @@
 
 
 <center>
+    <h1>Видео-урок</h1>
+    <hr />
+    <iframe width="640" height="400" src="https://www.youtube.com/embed/GlkX5nO7kyk" frameborder="0" allowfullscreen></iframe>
+</center>
+
+<center>
     <h3><b>Методы</b></h3>
 </center>
 <div class="well">
