--- a/MathСalculator.WebUI/Views/Iteration/SimpleIteration.cshtml
+++ b/MathСalculator.WebUI/Views/Iteration/SimpleIteration.cshtml
@@ -314,7 +314,7 @@
                     </center>
                                 <div class="panel-footer">
                               
-                                        @Html.LabelFor(x => x.Result);
+                                        @Html.LabelFor(x => x.Result)
                                         @Html.TextBoxFor(x => x.Result)
                     
                                         @if (User.Identity.IsAuthenticated)
