--- a/MathСalculator.WebUI/Views/NumericIntegral/NumericIntegr.cshtml
+++ b/MathСalculator.WebUI/Views/NumericIntegral/NumericIntegr.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "NumericIntegr";
+    ViewBag.Title = "Численное интегрирование";
 }
 
 
@@ -34,6 +34,14 @@
 <p align="left" style="line-height: 23.7999992370605px;">где&nbsp;<img align="middle" height="26" src="http://www.simumath.net/library/materials/Num_Integr_introduction/images/Eqn008.png" width="43" />&ndash; подынтегральная функция, непрерывная на отрезке&nbsp;<img align="middle" height="23" src="http://www.simumath.net/library/materials/Num_Integr_introduction/images/Eqn009.png" width="74" />.</p>
 
 <p align="left" style="line-height: 23.7999992370605px;">Задача численного интегрирования заключается в вычислении значения интеграла <img align="middle" height="59" src="http://www.simumath.net/library/materials/Num_Integr_introduction/images/Eqn007.png" style="line-height: 23.7999992370605px; text-align: -webkit-center;" width="109" />&nbsp;по ряду значений подынтегральной функции<img align="middle" height="26" src="http://www.simumath.net/library/materials/Num_Integr_introduction/images/Eqn010.png" width="43" />.</p>
+
+<center>
+    <h1>Видео-уроки</h1>
+    <hr />
+    <iframe width="640" height="400" src="https://www.youtube.com/embed/MtDgzlRjVys" frameborder="0" allowfullscreen></iframe>
+    <iframe width="640" height="400" src="https://www.youtube.com/embed/0Xk1SABeiVo" frameborder="0" allowfullscreen></iframe>
+</center>
+
 
 <center>
     <h3><b>Методы</b></h3>
