--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -46,8 +46,8 @@
                                 <ul>
                                     <li class="dropdown-header"> Методы решения СЛАУ</li>
                                     <li><a href="@Url.Action("Gaus", "Methods")">Метод Гаусса</a></li>
-                                    <li><a href="#">LU - разложение</a></li>
-                                    <li><a href="#">Метод квадратного корня</a></li>
+                                    <li><a href="#">LU - разложение(-)</a></li>
+                                    <li><a href="#">Метод квадратного корня(-)</a></li>
                                     <li class="divider"></li>
                                     <a href="@Url.Action("Iteration", "Iteration")">
                                         <li class="dropdown-header">Итерационные методы</li>
@@ -75,7 +75,7 @@
                             </li>
                             <li class="col-sm-3">
                                 <ul>
-                                    <li class="dropdown-header">Input groups</li>
+                                    <li class="dropdown-header">Математические методы</li>
                                     <li><a href="#">Basic example</a></li>
                                     <li><a href="#">Sizing</a></li>
                                     <li><a href="#">Checkboxes and radio addons</a></li>
@@ -103,7 +103,7 @@
                         </ul>
 
                     </li>
-                    <li><a href="@Url.Action("About", "Methods")">About</a></li>
+                    <li><a href="@Url.Action("About", "Methods")">О разработчике</a></li>
                 </ul>
  
                 <div class="nav navbar-nav navbar-right">
